@@ -4,19 +4,37 @@ import students.Student;
 
 import java.lang.reflect.Method;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 interface Criterion<E> {
   boolean test(E s);
 }
 
-public class School {
-  public static <E> void showAll(List<E> ls) {
-    for (E s : ls) {
-      System.out.println("> " + s);
-    }
-    System.out.println("---------------------------");
+interface Something<E> {
+  void doSomething(E e);
+}
+
+class PrintSomething implements Something<Student> {
+  @Override
+  public void doSomething(Student student) {
+    System.out.println("> " + student);
   }
+}
+
+public class School {
+//  public static <E> void showAll(Iterable<E> ls) {
+//    for (E s : ls) {
+//      System.out.println("> " + s);
+//    }
+//    System.out.println("---------------------------");
+//  }
+  public static <E> void withEvery(Iterable<E> ls, Something<E> someObject) {
+    for (E s : ls) {
+      someObject.doSomething(s);
+    }
+  }
+
   public static <E> List<E> getByCriterion(Iterable<E> ls, Criterion<E> crit) {
     List<E> res = new ArrayList<>();
     for (E s : ls) {
@@ -34,7 +52,10 @@ public class School {
         Student.of("Sheila", 3.9, "Math", "Physics", "Quantum Mechanics", "Astrophysics")
     );
 
-    showAll(roster);
+    withEvery(roster, x -> System.out.println("> " + x));
+//    withEvery(roster, (Student student) -> {
+//      System.out.println("> " + student);
+//    });
 
     // show smart students
 //    showAll(getByCriterion(roster, ???));
@@ -42,7 +63,8 @@ public class School {
     // show unenthusiastic students
 //    showAll(getByCriterion(roster, ???));
 
-    List<String> names = List.of("Alex", "James", "Fred", "Susan", "Bill");
+//    List<String> names = List.of("Alex", "James", "Fred", "Susan", "Bill");
+    List<String> names = Arrays.asList("Alex", "James", "Fred", "Susan", "Bill");
 
     // show long names
 //    showAll(getByCriterion(names, ???));
